# src/main/resources/static/.well-known/openapi.yaml
@@ -41,6 +41,22 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/ErrorModel"
+    post:
+      summary: Create resource
+      operationId: postResourceOperation
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/ResourceModel"
+      responses:
+        "200":
+          description: Successful operation
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ResourceModel"
   /resources/{id}:
     get:
       summary: Get a resource
@@ -65,6 +81,23 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/ErrorModel"
+    delete:
+      summary: Delete a resource
+      operationId: deleteResourceOperation
+      parameters:
+        - name: id
+          in: path
+          description: ID of resource
+          required: true
+          schema:
+            $ref: "#/components/schemas/Uuid"
+      responses:
+        "200":
+          description: Successful operation
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ResourceModel"
 components:
   schemas:
     Uuid:
@@ -72,8 +105,15 @@ components:
       type: string
       maxLength: 36
       format: uuid
+      readOnly: true
     ApiInfoModel:
       type: object
+      required:
+        - apiName
+        - apiVersion
+        - apiReleased
+        - apiDocumentation
+        - apiStatus
       properties:
         apiName:
           type: string
@@ -85,26 +125,37 @@ components:
           type: string
         apiStatus:
           type: string
-      required:
-        - name
-        - version
     ResourceModel:
       type: object
+      required:
+        - id
+        - name
+        - created
+        - updated
       properties:
         id:
           $ref: "#/components/schemas/Uuid"
         name:
           type: string
+        created:
+          type: string
+          format: date-time
+          readOnly: true
+        updated:
+          type: string
+          format: date-time
+          readOnly: true
+        deleted:
+          type: string
+          format: date-time
+          readOnly: true
+    ErrorModel:
+      type: object
       required:
         - code
         - message
-    ErrorModel:
-      type: object
       properties:
         code:
           type: string
         message:
           type: string
-      required:
-        - code
-        - message
